<resources>
    <string name="app_name">Geo</string>
    <string name="hint_login">Identifiant</string>
    <string name="hint_password">Mot de passe</string>
    <string name="but_valider">Valider</string>
    <string name="but_effacer">Effacer</string>
    <string name="but_quitter">Quitter</string>
    <string name="login"></string>
    <string name="password"></string>
    <string name="mdp512">f69624921ee6583a0c42e446f6f87d055da032f93d3d1c2b281d4d246727dd48d2ad907f7ca16a96191e2c1f59f5642b4b04792df7da1309f7488fd3f17ce2f4</string>
    <string name="logok">Login et mot de passe corrects</string>
    <string name="logfailed">Login ou mot de passe incorrect</string>
    <string name="google_maps_key">AIzaSyDA7L_lmIAtkTJjeFk02xIoIOYBuNQcGM8</string>
    <string name="txtCash">Entrez votre solution</string>
    <string name="pres_quiz">Vous connaissez la réponse ? \n\nQue choisissez-vous ?\n Duo, Carré ou Cash?</string>
    <string name="ville">Ville :</string>
    <string name="suivant">Suivant</string>
    <string name="score_geo">Vos scores sur le jeu Geo</string>
    <string name="accueil">Accueil</string>
    <string name="inscription">Inscription</string>
    <string name="play_noscore">Jouer sans enregistrer son score</string>
    <string name="goal_geo">Objectif : Se situer le plus proche de la ville</string>
    <string name="tips_geo">Appuyez LONGTEMPS pour mettre votre marker</string>
    <string name="title_score">Vos scores sur le jeu Geo</string>
    <string name="signup">Inscription</string>
    <string name="subtitle_signup">Création d\'un nouveau compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password_sign">Password</string>
    <string name="sign">S\'inscrire</string>
    <string name="co_ok">Déja enregistré ? connectez vous</string>
    <string name="question">Question</string>
    <string name="duo">Duo</string>
    <string name="carre">Carré</string>
    <string name="cash">Cash</string>
    <string name="score">Score</string>
    <string name="votre_score">Votre score</string>
    <string name="replay">Rejouer</string>
    <string name="played">Partie déja joué</string>
    <string name="expl_popup">Veuillez cliquer sur suivant vous avez déja posé votre point</string>

</resources>