<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/corner_background"
    app:backgroundTint="@color/white"
    android:padding="5dp">

    <ImageView
        android:id="@+id/img_popup_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_popup_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/score"
        android:textColor="@color/vert_principal"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_popup_logo" />

    <TextView
        android:id="@+id/txt_popup_aff_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/votre_score"
        android:textColor="@color/vert_principal"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_popup_score" />

    <Button
        android:id="@+id/but_popup_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/corner_background"
        android:padding="10dp"
        android:text="@string/accueil"
        app:backgroundTint="@color/vert_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but_popup_rejouer"
        app:layout_constraintTop_toBottomOf="@+id/txt_popup_aff_score" />

    <Button
        android:id="@+id/but_popup_rejouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/corner_background"
        android:padding="10dp"
        android:text="@string/replay"
        app:backgroundTint="@color/vert_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/but_popup_accueil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_popup_aff_score" />


</androidx.constraintlayout.widget.ConstraintLayout>